Fix MashStep insert query, ajust log4j,  improve run with options, varchar 250 to 512